force-app/main/default/objects/Commitment__c/Commitment__c.object-meta.xml
<CustomObject>
    <description>Custom object representing GFW Recurring Donations (used instead of NPSP Recurring Donations to avoid related automation).</description>
    <label>Commitment</label>
    <nameField>
        <label>Commitment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>