force-app/main/default/objects/Commitment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that is providing ongoing commited donations.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commitments</relationshipLabel>
    <relationshipName>Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>