force-app/main/default/objects/Commitment__c/fields/Authorization_Scan_Box_Link__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Scan_Box_Link__c</fullName>
    <description>Scan of Authorization to charge CC monthly saved in Box</description>
    <label>Authorization Scan Box Link</label>
    <type>Url</type>
</CustomField>