force-app/main/default/objects/Commitment__c/fields/Bad_CC_Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>Bad_CC_Last_4_Digits__c</fullName>
    <label>Bad CC Last 4 Digits</label>
    <length>200</length>
    <type>Text</type>
</CustomField>