force-app/main/default/objects/Commitment__c/fields/CC_Exp_date__c.field-meta.xml
<CustomField>
    <fullName>CC_Exp_date__c</fullName>
    <label>CC Exp date</label>
    <type>Date</type>
</CustomField>