force-app/main/default/objects/Commitment__c/fields/CC_Last_4_digits__c.field-meta.xml
<CustomField>
    <fullName>CC_Last_4_digits__c</fullName>
    <label>CC Last 4 digits</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>