force-app/main/default/objects/Commitment__c/fields/CC_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Type__c</fullName>
    <label>CC Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>AmericanExpress</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>JCB</fullName>
            </value>
            <value>
                <fullName>DinersClub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>