force-app/main/default/objects/Commitment__c/fields/Date_closed__c.field-meta.xml
<CustomField>
    <fullName>Date_closed__c</fullName>
    <label>Date closed</label>
    <type>Date</type>
</CustomField>