force-app/main/default/objects/Commitment__c/fields/Date_established__c.field-meta.xml
<CustomField>
    <fullName>Date_established__c</fullName>
    <label>Date established</label>
    <type>Date</type>
</CustomField>