force-app/main/default/objects/Commitment__c/fields/Date_last_donation__c.field-meta.xml
<CustomField>
    <fullName>Date_last_donation__c</fullName>
    <label>Date last donation</label>
    <type>Date</type>
</CustomField>