force-app/main/default/objects/Commitment__c/fields/Date_next_donation__c.field-meta.xml
<CustomField>
    <fullName>Date_next_donation__c</fullName>
    <label>Date next donation</label>
    <type>Date</type>
</CustomField>