force-app/main/default/objects/Commitment__c/fields/EA_Commitment_ID__c.field-meta.xml
<CustomField>
    <fullName>EA_Commitment_ID__c</fullName>
    <description>Maps to the EA Commitment which created the GFW Recurring Donation record representing this Commitment.</description>
    <label>EA Commitment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>