force-app/main/default/objects/Commitment__c/fields/Form_of_payment__c.field-meta.xml
<CustomField>
    <fullName>Form_of_payment__c</fullName>
    <label>Form of payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit card</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>