force-app/main/default/objects/Commitment__c/fields/GFW_RecurringDonation_ID__c.field-meta.xml
<CustomField>
    <fullName>GFW_RecurringDonation_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id of matching GFW Recurring Donation record.</description>
    <externalId>true</externalId>
    <label>GFW RecurringDonation ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>