force-app/main/default/objects/Commitment__c/fields/Payment_processor_donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_processor_donor_ID__c</fullName>
    <description>PayPal user ID or donor ID at payment gateway.</description>
    <label>Payment processor donor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>