force-app/main/default/objects/Commitment__c/fields/Sync_Log_Record__c.field-meta.xml
<CustomField>
    <fullName>Sync_Log_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Sync Log Record last used to create/update this Commitment in sync.</description>
    <label>Sync Log Record</label>
    <referenceTo>Sync_Log_Record__c</referenceTo>
    <relationshipLabel>Commitments</relationshipLabel>
    <relationshipName>Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>